--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "framer-motion": "^11.9.0",
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.5",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
     "react-toastify": "^10.0.5"
